# cura-build

./: CMakeLists.txt  README.md  build_deb_package.sh  cura  cura-lulzbot  cura-lulzbot.desktop  cura2  cura2.desktop  dev_setup.sh  env_win32.bat  env_win64.bat  get_build_version  get_build_version.sh  setup_linux.py.in  setup_osx.py.in  setup_win32.py.in
docker/config/ultimaker/DEBIAN/: control
docker/config/xenial_protobuf/DEBIAN/: control
docker/config/xenial_python_deps/DEBIAN/: control
docker/images/debian/stretch/: Dockerfile
docker/images/ubuntu/xenial/: Dockerfile
docker/images/ubuntu/zesty/: Dockerfile
docker/scripts/: build.sh  build_cbd.sh  build_cura2.sh  build_curaengine.sh  build_doodle3d_plugin.sh  build_libarcus.sh  build_libsavitar.sh  build_postprocessing_plugin.sh  build_protobuf.sh  build_pythonuranium.sh  build_ultimaker.sh
gentoo/dev-libs/libarcus/: libarcus-9999.ebuild
gentoo/dev-libs/libsavitar/: libsavitar-9999.ebuild
gentoo/dev-python/uranium/: uranium-9999.ebuild
gentoo/media-gfx/cura/: cura-9999.ebuild
gentoo/media-gfx/cura-data-fdm-materials/: cura-data-fdm-materials-9999.ebuild
gentoo/media-gfx/cura-data-lulzbot/: cura-data-lulzbot-9999.ebuild
gentoo/media-gfx/cura-data-ultimaker/: cura-data-ultimaker-9999.ebuild
gentoo/media-gfx/curaengine/: curaengine-9999.ebuild
scripts/: cura_version.py
